[package]
name = "fm-receiver"
version = "0.1.0"
edition = "2018"

[dependencies]
futuresdr = { path = "../..", default-features = false, features=["soapy", "audio"] }
clang-sys={version="1.2.2", features=["clang_11_0", "runtime"]}

[[bin]]
name = "fm-receiver"
path = "fm_receiver.rs"

[build-dependencies]
bindgen = {version="0.57"}
clang-sys={version="1.2.2", features=["clang_11_0", "runtime"]}

# [dev-dependencies]
# clang-sys="1.2.2"

[dev-dependencies.clang-sys]
version="1.2.2"
features = ["clang_11_0", "runtime"]