[package]
name = "keyfob"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features=["seify"] }
