[package]
name = "rattlegram"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
crc = "3.0"
futuresdr = { path = "../..", features = ["audio"] }
rustfft = "6.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4", features = ["derive"] }
wav = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
leptos = { version = "0.5", features = ["csr", "nightly"] }
