[package]
name = "rattlegram"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
crc = "3.0"
futuresdr = { path = "../..", features = ["audio"] }
rustfft = "6.1"
serde = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
wav = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.5", features = ["csr", "nightly"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "=0.3.67" # wgpu 19.1 breaks w/ 0.3.68
features = [
  'MediaStreamAudioSourceNode',
  'MediaStreamAudioSourceOptions',
  'MediaStreamConstraints',
  'Navigator',
  'MediaStream',
  'AudioContext',
  'MediaDevices',
  'ScriptProcessorNode',
  'AudioProcessingEvent',
  'AudioBuffer',
  'AudioWorkletNode',
  'AudioWorkletNodeOptions',
  'Window'
]
