[package]
name = "rattlegram"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
anyhow = "1.0"
crc = "3.2"
futuresdr = { path = "../..", features = ["audio"] }
rustfft = "6.2"
serde = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
hound = "3.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'MediaStreamAudioSourceNode',
  'MediaStreamAudioSourceOptions',
  'MediaStreamConstraints',
  'Navigator',
  'MediaStream',
  'AudioContext',
  'MediaDevices',
  'ScriptProcessorNode',
  'AudioProcessingEvent',
  'AudioBuffer',
  'AudioWorkletNode',
  'AudioWorkletNodeOptions',
  'Window'
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
