[package]
name = "spectrum"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cpu"
required-features = ["cpu"]

[[bin]]
name = "vulkan"
required-features = ["cpu", "vulkan"]

[features]
default = []
cpu = ["futuresdr/soapy"]
vulkan = ["futuresdr/vulkan", "vulkano", "vulkano-shaders"]
wgpu = ["futuresdr/wgpu"]

[dependencies]
anyhow = "1.0"
futuresdr = { path = "../.." }
vulkano = { version = "0.34", optional = true }
vulkano-shaders = { version = "0.34", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.6"
leptos = { version = "0.7", features = ["csr", "nightly"] }
log = "0.4"
prophecy = { path = "../../crates/prophecy" }
serde_json = "1.0"
