[package]
name = "spectrum"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cpu"

[[bin]]
name = "vulkan"
required-features = ["vulkan"]

[features]
default = []
vulkan = ["futuresdr/vulkan", "vulkano", "vulkano-shaders"]
wgpu = ["futuresdr/wgpu"]

[dependencies]
anyhow = "1.0"
futuresdr = { path = "../..", features = ["soapy"] }
vulkano = { version = "0.35", optional = true }
vulkano-shaders = { version = "0.35", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.6"
log = "0.4"
leptos = { version = "0.8", features = ["csr", "nightly"] }
prophecy = { path = "../../crates/prophecy" }
serde_json = "1.0"
