[package]
name = "ssb"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features=["soapy", "audio"] }
num-complex = "0.4"
hound = "3.5"

[[bin]]
name = "receive"
path = "receive.rs"

[[bin]]
name = "transmit"
path = "transmit.rs"
