[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futuresdr = { path = "../..", features = ["soapy"] }
num-complex = "0.4.0"
clap = { version = "3.0.13", features = ["derive"] }
